Fixed profile pic alignment error

--- a/src/containers/settings/index.css
+++ b/src/containers/settings/index.css
@@ -5,7 +5,7 @@
     height: 250px;
     width: 250px;
 }
-.profPic{
+#profPic{
     height: 250px !important;
     width: 250px !important;
     border-radius: 100%;
